# GitHub_practice_Exseed

./: README.md  pyproject.toml
input/: dockerfile  dockerfile:Zone.Identifier
input/Cursor/: test.py
input/Gradio/: app.py
input/hands-on/: self-introduce
input/python/: input_python.py
