[project]
name = "exseed"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "raise0915", email = "63898148+raise0915@users.noreply.github.com" }
]
dependencies = [
    "gradio>=4.19.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "exseed:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/exseed"]
